fixed wrapping

--- a/src/modules/corgi/components/HighestBid/HighestBid.scss
+++ b/src/modules/corgi/components/HighestBid/HighestBid.scss
@@ -10,6 +10,7 @@
 
   &__info {
     @include dis-flex(flex-start, center);
+    flex-wrap: wrap;
 
     padding-left: 1.25rem;
   }
